--- a/Index.html
+++ b/Index.html
@@ -4,20 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Desarrollador Fullstack</title>
 
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/home.css">
 </head>
 <body>
-    <div id="stars"></div>
-    <div id="stars2"></div>
-    <div id="stars3"></div>
-    <div id="title">
+    
+    <nav id="nav__bar">
+        <ul id="nav__ul">
+            <li class="nav__li"><span><a href="#Inicio">Inicio</a></span></li>
+            <li class="nav__li"><span><a href="pages/Acerca.html">Acerca de</a></span></li>
+            <li class="nav__li"><span><a href="pages/Proyectos.html">Proyectos</a></span></li>
+            <li class="nav__li"><span><a href="pages//Contacto.html">Contacto</a></span></li>
+            <li class="nav__li"><span><a href="CV.pdf" download="CV">CV</a></span></li>
+        </ul>
+    </nav>
+
+    <main>
+        <section id="Inicio">
+            <div id="inicio__container">
+                <h1>Desarrollador Fullstack</h1>
+                <h2>Dylan Yoan Martínez Casas</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit corrupti aut, cum cupiditate aperiam accusamus. Possimus dolores numquam, est molestias quasi magni hic tenetur commodi, molestiae modi mollitia maxime dolorem?</p>
+            </div>
+            <div class="inicio__img">
+                <img src="retrato.png" alt="Foto_Perfil">
+            </div>
+        </section>
+        <div id="stars"></div>
+        <div id="stars2"></div>
+        <div id="stars3"></div>
+    </main>
+
+    
+
+    <!-- <div id="title">
     <span>PURE CSS</span>
     <br>
     <span>PARALLAX PIXEL STARS</span>
-    </div>
+    </div> -->
+
+
 
 
     <script src="script.js"></script>
