--- a/pages/Acerca.html
+++ b/pages/Acerca.html
@@ -7,10 +7,66 @@
     <title>Acerca de</title>
 
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="styles/acerca.css">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../styles/acerca.css">
 </head>
 <body>
-    
+    <div id="stars"></div>
+        <div id="stars2"></div>
+        <div id="stars3"></div>
+    <nav id="nav__bar">
+        <ul id="nav__ul">
+            <li class="nav__li"><span><a href="../index.html">Inicio</a></span></li>
+            <li class="nav__li in"><span><a href="#">Acerca de</a></span></li>
+            <li class="nav__li"><span><a href="../pages/Proyectos.html">Proyectos</a></span></li>
+            <li class="nav__li"><span><a href="../pages/Contacto.html">Contacto</a></span></li>
+            <li class="nav__li"><span><a href="../CV.pdf" download="CV">CV</a></span></li>
+        </ul>
+    </nav>
+    <div class="container">
+        <div class="carousel">
+            <div class="image"></div>
+            <div class="image"></div>
+            <div class="image"></div>
+            <div class="image"></div>
+
+        </div>
+        <div class="container_title">
+            <h2>Front-End</h2>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="container_title2">
+            <h2>Herramientas</h2>
+        </div>
+
+        <div class="carousel">
+            <div class="image2"></div>
+            <div class="image2"></div>
+            <div class="image2"></div>
+
+        </div>
+        
+    </div>
+
+    <div class="container3">
+        <div class="carousel">
+            <div class="image3"></div>
+            <div class="image3"></div>
+            <div class="image3"></div>
+            <div class="image3"></div>
+            <div class="image3"></div>
+            <div class="image3"></div>
+
+        </div>
+        <div class="container_title3">
+            <h2>Back-End</h2>
+        </div>
+    </div>
+
+
+
+    <script src="../script.js"></script>
 </body>
 </html>
