--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -7,10 +7,48 @@
     <title>Contacto</title>
 
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="styles/contacto.css">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../styles/contacto.css">
+    <script src="https://kit.fontawesome.com/2db48d7766.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div id="stars"></div>
+    <div id="stars2"></div>
+    <div id="stars3"></div>
+    <nav id="nav__bar">
+        <ul id="nav__ul">
+            <li class="nav__li"><span><a href="../index.html">Inicio</a></span></li>
+            <li class="nav__li"><span><a href="../pages/Acerca.html">Acerca de</a></span></li>
+            <li class="nav__li"><span><a href="../pages/Proyectos.html">Proyectos</a></span></li>
+            <li class="nav__li in"><span><a href="#">Contacto</a></span></li>
+            <li class="nav__li"><span><a href="../CV.pdf" download="CV">CV</a></span></li>
+        </ul>
+    </nav>
+
+    <main>
+
+        <div class="container_emailTelefono">
+            <h2>Email</h2>
+            <h2>dylanyoanmc@gmail.com</h2>
+            <h2>Telefono</h2>
+            <h2>+52 55 4667 4558</h2>
+        </div>
+        <div class="container_redes">
+            <a href="https://wa.me/5646674558" target="_blank" rel="noopener noreferrer">
+                <img src="../assets/whatsapp.png" alt="whatsapp Icon">
+            </a>
+            <a href="https://www.linkedin.com/in/dylancs/" target="_blank" rel="noopener noreferrer">
+                <img src="../assets/linkedin.png" alt="instagram Icon">
+            </a>
+            <a href="https://www.instagram.com/dylancdev/" target="_blank" rel="noopener noreferrer">
+                
+                <img src="../assets/instagram.png" alt="instagram Icon">
+            </a>
+        </div>
+    </main>
+
+
     
+    <script src="../script.js"></script>
 </body>
 </html>
