Alpha 1.0 Poco Responsive

--- a/pages/Proyectos.html
+++ b/pages/Proyectos.html
@@ -25,28 +25,53 @@
         </ul>
     </nav>
 
+    <h1>PROYECTOS</h1>
+
     <div class="swiper mySwiper">
 
         <div class="swiper-wrapper">
 
             <div class="swiper-slide">
-                <img src="../assets/projects/audifonos.png" alt="">
+
+                <a href="https://dylanyoan.github.io/responsive-landing-page-headphones-Start-project-from-scratch/" target="_blank" rel="noopener noreferrer">
+                    <img src="../assets/projects/audifonos.png" alt="">
+                    <h2>Proyecto Front-End Audifonos Beat</h2>
+
+                </a>
+                
             </div>
             <div class="swiper-slide">
-                <img src="../assets/projects/ecommerce.png" alt="">
-            </div>
-            <div class="swiper-slide">
-                <img src="../assets/projects/audifonos.png" alt="">
-            </div>
-            <div class="swiper-slide">
-                <img src="../assets/projects/carrito.png" alt="">
-            </div>
-            <div class="swiper-slide">
-                <img src="../assets/projects/halloween.png" alt="">
+                <a href="https://dylanyoan.github.io/Responsive-Ecommerce/" target="_blank" rel="noopener noreferrer">
+                    <img src="../assets/projects/ecommerce.png" alt="">
+                    <h2>Proyecto Front-End Ecommerce</h2>
+                </a>
             </div>
 
+            <div class="swiper-slide">
+                <a href="shopeasemx.com" target="_blank" rel="noopener noreferrer">
+                    <img src="../assets/projects/carrito.png" alt="">
+                    <h2>Proyecto FullStack Carrito de Compras </h2>
+
+                </a>
+            </div>
+            <div class="swiper-slide">
+                <a href="https://dylanyoan.github.io/responsive-halloween-website-project-from-scratch/" target="_blank" rel="noopener noreferrer">
+                    <img src="../assets/projects/halloween.png" alt="">
+                    <h2>Proyecto Front-End Halloween</h2>
+
+                </a>
+            </div>
+
+            <div class="swiper-slide">
+                <a href="https://dylanyoan.github.io/space-tourism-website-main/" target="_blank" rel="noopener noreferrer">
+                    <img src="../assets/projects/space.png" alt="">
+                    <h2>Proyecto Front-End Space</h2>
+
+                </a>
+            </div>
         </div>
-
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
     </div>
 
     <!-- <div class="carousel">
