--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li class="nav__li in"><span><a href="#Inicio">Inicio</a></span></li>
             <li class="nav__li"><span><a href="pages/Acerca.html">Acerca de</a></span></li>
             <li class="nav__li"><span><a href="pages/Proyectos.html">Proyectos</a></span></li>
-            <li class="nav__li"><span><a href="pages//Contacto.html">Contacto</a></span></li>
+            <li class="nav__li"><span><a href="pages/Contacto.html">Contacto</a></span></li>
             <li class="nav__li"><span><a href="CV.pdf" download="CV">CV</a></span></li>
         </ul>
     </nav>
