Se actualiza descripción

--- a/index.html
+++ b/index.html
@@ -27,9 +27,14 @@
     <main>
         <section id="Inicio">
             <div id="inicio__container">
-                <h1>Desarrollador Fullstack</h1>
+                <h1>Desarrollador de Software</h1>
                 <h2>Dylan Yoan Martínez Casas</h2>
-                <p>¡Bienvenidos a mi portfolio! Soy un apasionado desarrollador full stack con una amplia experiencia en la creación de soluciones web innovadoras. Mi objetivo principal es combinar mi pasión por el diseño creativo con mi habilidad para desarrollar aplicaciones funcionales y eficientes que brinden una experiencia excepcional al usuario.</p>
+                <p>Desarrollador de software con 3 años de experiencia trabajando con distintos proyectos desde el 
+diseño y desarrollo hasta el despliegue y mantenimiento de estos, destacando mi participación en 
+proyectos donde  implemento IA para chatbots,  sistemas gigantes de  gestión empresarial donde 
+logre resolver varios issues que traían hace años como un proceso de validación de pedidos para 
+el cliente y finalmente configuré servidores Debian 12 para el despliegue de estos sistemas, rutas, 
+ssl, gestores de BD, etc.</p>
             </div>
             <div class="inicio__img">
                 <img src="retrato.png" alt="Foto_Perfil">
